--- a/gradle.properties
+++ b/gradle.properties
@@ -21,17 +21,18 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-VERSION_NAME=1.0.0-SNAPSHOT
-GROUP_ID=com.github.yourgithub
-POM_ARTIFACT_ID=sharedutilKit
+
+VERSION_NAME=1.0.0
+GROUP_ID=io.github.techmohitgarg
+POM_ARTIFACT_ID=sharedutilkit
 POM_NAME=Shared Util Kit
 POM_DESCRIPTION=A useful Kotlin library for Android/IOS
-POM_URL=https://github.com/yourgithub/your-library
+POM_URL=https://github.com/techmohitgarg/LibraryProjectSample
 POM_LICENSE_NAME=The Apache License, Version 2.0
 POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
-POM_SCM_URL=https://github.com/yourgithub/your-library
-POM_SCM_CONNECTION=scm:git:https://github.com/yourgithub/your-library.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/yourgithub/your-library.git
+POM_SCM_URL=https://github.com/techmohitgarg/LibraryProjectSample
+POM_SCM_CONNECTION=scm:git:https://github.com/techmohitgarg/LibraryProjectSample.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com:techmohitgarg/LibraryProjectSample.git
 POM_DEVELOPER_ID=techmohitgarg
 POM_DEVELOPER_NAME=Mohit garg
 POM_DEVELOPER_EMAIL=tech.mohit.garg@email.com
